zonal officer calling added but using gsp is still not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,8 @@
         <item>Tuikhuahtlang</item>
     </string-array>
 
+    <string name="zonalOfficerHeading">I awmna hmun GPS hmangin i Zonal Officer zawng rawh. GPS enable a ngai ang.</string>
+
 </resources>
 
 
