so far so good.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Database Demo</string>
+    <string name="app_name">ADDMA</string>
 
     <string-array name="district">
 
