--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ADDMA</string>
+    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
 
     <string-array name="district">
 
