client notification with firebase cloud message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,7 +112,6 @@
         <item>Durtlang Leitan</item>
         <item>Durtlang North</item>
         <item>Selesih</item>
-        <item>Chanmari West</item>
         <item>Edenthar</item>
         <item>Chaltlang Lily Veng</item>
         <item>Bawngkawn</item>
@@ -159,7 +158,7 @@
         <item>Tanhril</item>
         <item>Govt. Complex</item>
         <item>Zonuam</item>
-        <item>Upper Republi</item>c
+        <item>Upper Republic</item>c
         <item>Republic</item>
         <item>Republic Vengthlang</item>
         <item>Venghlui</item>
