client notification with firebase cloud message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,7 +156,7 @@
         <item>Chawlhhmun</item>
         <item>Luangmual</item>
         <item>Tanhril</item>
-        <item>Govt. Complex</item>
+        <!--<item>Govt. Complex</item>-->
         <item>Zonuam</item>
         <item>Upper Republic</item>c
         <item>Republic</item>
