both notificaiton is good

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,14 @@
     </string-array>
 
     <string name="zonalOfficerHeading">I awmna hmun GPS hmangin i Zonal Officer zawng rawh. GPS enable a ngai ang.</string>
+    <string name="title_activity_notification">NotificationActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_notification_update">NotificationActivityUpdate</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_notification2">NotificationActivity2</string>
 
 </resources>
 
